// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-summary does not render scratch price amount_due is different than total_amount 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary renders 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary renders scratch price if no trial has total savings amount 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-format-number class="scratch-price total-price" currency="usd" type="currency" value="1100"></sc-format-number>
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, collapsed on desktop and collapsed in mobile 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, collapsed on desktop and collapsed in mobile 2`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, collapsed on desktop and not collapsed in mobile 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, collapsed on desktop and not collapsed in mobile 2`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Show Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price price--collapsed" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, not collapsed on desktop and collapsed in mobile 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, not collapsed on desktop and collapsed in mobile 2`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, not collapsed on desktop and not collapsed in mobile 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when collapsible, not collapsed on desktop and not collapsed in mobile 2`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <sc-line-item style="--price-size: var(--sc-font-size-x-large);">
        <span class="collapse-link" slot="title" tabindex="0">
          Summary
          <svg class="collapse-link__icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
          </svg>
        </span>
        <span slot="description">
          <slot name="description"></slot>
        </span>
        <span class="price" slot="price">
          <sc-total class="total-price" total="total"></sc-total>
        </span>
      </sc-line-item>
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when not collapsible 1`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;

exports[`sc-order-summary should render when not collapsible 2`] = `
<sc-order-summary>
  <mock:shadow-root>
    <div class="summary summary--open">
      <div class="summary__content summary__content--empty" style="overflow: hidden;">
        <slot></slot>
      </div>
      <p class="empty">
        Your cart is empty.
      </p>
    </div>
  </mock:shadow-root>
</sc-order-summary>
`;
